dev: app is now linked to api